# Marker-data-feed-handler

./: .gitignore  CMakeLists.txt  README.md
benchmarks/: cache_benchmark.cpp  latency_benchmark.cpp  parser_benchmark.cpp
docs/: DESIGN.md  GBM.md  NETWORK.md  PERFORMANCE.md  QUESTIONS.md
include/: cache.h  client_manager.h  latency_tracker.h  market_socket.h  memory_pool.h  parser.h
scripts/: benchmark_latency.sh  build.sh  run_client.sh  run_demo.sh  run_server.sh
src/client/: feed_handler.cpp  market_socket.cpp  parser.cpp  visualizer.cpp
src/common/: cache.cpp  latency_tracker.cpp  memory_pool.cpp  protocol.h
src/server/: client_manager.cpp  exchange_simulator.cpp  exchange_simulator.h  main.cpp  tick_generator.cpp  tick_generator.h
tests/: test_cache.cpp  test_latency.cpp  test_parser.cpp
